# context-version-exec

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
current_bin/: Cargo.toml
current_bin/src/: main.rs
current_bin/tests/: end_to_end.rs
prior_bin/: Cargo.toml
prior_bin/src/: main.rs
