[package]
name = "current_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
clap = { version = "4.4.11", features = ["derive"] }
exec = "0.3.1"
predicates = "3.0.4"
